objects/Competitor__c.object
<CustomObject>
    <label>Competitor (New)</label>
    <nameField>
        <displayFormat>COMP-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABB Bomem</fullName>
                </value>
                <value>
                    <fullName>Affymetrix Inc</fullName>
                </value>
                <value>
                    <fullName>Agilent Technologies</fullName>
                </value>
                <value>
                    <fullName>ALLtech Associates</fullName>
                </value>
                <value>
                    <fullName>Alpha Innotech</fullName>
                </value>
                <value>
                    <fullName>Analitik Jena</fullName>
                </value>
                <value>
                    <fullName>Applied Biosystems (ABI)</fullName>
                </value>
                <value>
                    <fullName>Applied Biosystems (Tropix)</fullName>
                </value>
                <value>
                    <fullName>AssayNet</fullName>
                </value>
                <value>
                    <fullName>ATI</fullName>
                </value>
                <value>
                    <fullName>Atlantic Lab Equipment</fullName>
                </value>
                <value>
                    <fullName>ATS Scientific Inc.</fullName>
                </value>
                <value>
                    <fullName>Axon Instruments (Molecular Devices)</fullName>
                </value>
                <value>
                    <fullName>Beckman Coulter</fullName>
                </value>
                <value>
                    <fullName>Berthold Detection Systems</fullName>
                </value>
                <value>
                    <fullName>Bio-Rad Laboratories</fullName>
                </value>
                <value>
                    <fullName>Bioscan</fullName>
                </value>
                <value>
                    <fullName>Biotage</fullName>
                </value>
                <value>
                    <fullName>BioTek Instruments</fullName>
                </value>
                <value>
                    <fullName>BlazeLIMS</fullName>
                </value>
                <value>
                    <fullName>BMG International</fullName>
                </value>
                <value>
                    <fullName>Boumem</fullName>
                </value>
                <value>
                    <fullName>Bruker Daltronics</fullName>
                </value>
                <value>
                    <fullName>Buck Scientific</fullName>
                </value>
                <value>
                    <fullName>Caliper</fullName>
                </value>
                <value>
                    <fullName>Canberra Packard</fullName>
                </value>
                <value>
                    <fullName>Carlo Erba</fullName>
                </value>
                <value>
                    <fullName>Carl Zeiss Microimaging</fullName>
                </value>
                <value>
                    <fullName>Carsen Group</fullName>
                </value>
                <value>
                    <fullName>CEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000000n0Y1EAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>ALH</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>ESS</fullName>
                </value>
                <value>
                    <fullName>FGP</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>ICP</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LVI</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MDX</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>NEO</fullName>
                </value>
                <value>
                    <fullName>NTD</fullName>
                </value>
                <value>
                    <fullName>PRE</fullName>
                </value>
                <value>
                    <fullName>RRD</fullName>
                </value>
                <value>
                    <fullName>RRS</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>TEA</fullName>
                </value>
                <value>
                    <fullName>UVS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Strengths__c</fullName>
        <label>Key Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Weaknesses__c</fullName>
        <label>Key Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVC_Competitor__c</fullName>
        <label>SVC Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thermo</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>SU</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Model__c</fullName>
        <label>Competitor Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successful_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful Vendor</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>